@@ -160,6 +160,7 @@ fixed bugs:
 - corrected bug in priceAndCutLoop(): separation was aborted if domain reduction was applied
 - fixed bug in SCIPlpSolveAndEval(): added extra simplex step if objlimit reached, fastmip and pricers enabled 
   in order to get dual solution for pricing.
+- fixed bug in cons_varbounds.c, concerning SCIPaddVarVlb() and SCIPaddVarVub()
 
 SCIP version 1.00
 =================
